# libtnp

./: .gitignore  AUTHOR  CMakeLists.txt  README.md  fileList.cmake  migration
cmake/: build_config.cmake  macro.cmake  tnpConfig.cmake
include/: tnp.h  tnp.hpp
include/tnp/: npnumber.hpp  ops.h  polynomial.hpp
include/tnp/ops/: composition.hpp  multiplication.hpp
src/: composition.cpp  multiplication.cpp  npnumber.cpp  ops.cpp  polynomial.cpp  polynomial.hpp  tnp.cpp
test/: analyticFunctions.hpp  nppolynomial.hpp  numberGenerator.hpp  polynomialIdentities.hpp  polynomialTest.hpp  simpleTest.cpp  tnp.test.hpp  unaryAlgebraic.cpp  unaryAlgebraic.hpp
